WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133629
iOS8 WebGL OES_vertex_array_object missing
https://bugs.webkit.org/show_bug.cgi?id=133629
Summary
iOS8 WebGL OES_vertex_array_object missing
Florian Bösch
Reported
2014-06-08 21:45:59 PDT
OES_vertex_array_object is not implemented on iOS 8. Maybe a missing merge/regression of
https://bugs.webkit.org/show_bug.cgi?id=53940
Attachments
Patch
(5.57 KB, patch)
2014-06-09 13:09 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2014-06-09 13:09:10 PDT
Created
attachment 232725
[details]
Patch
WebKit Commit Bot
Comment 2
2014-06-09 14:09:40 PDT
Comment on
attachment 232725
[details]
Patch Clearing flags on attachment: 232725 Committed
r169714
: <
http://trac.webkit.org/changeset/169714
>
WebKit Commit Bot
Comment 3
2014-06-09 14:09:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug